# PhatomEngine

./: .gitignore  CMakeLists.txt  Readme.md
Application/: CMakeLists.txt  main.cpp
Core/src/: main.cpp  test.cpp
Doc/: PMX2.1.md  VMD.md
Phatom/: CMakeLists.txt
Phatom/Common/: File.cpp  File.h  Log.h  TextFileReader.cpp  TextFileReader.h  UnicodeUtil.cpp
Phatom/Core/: Application.cpp  Application.h  Camera.cpp  Camera.h  PhatomMain.cpp  Window.cpp  Window.h
Phatom/Graphics/: VulkanConfig.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanQueue.cpp  VulkanQueue.h  VulkanSwapChain.cpp  VulkanSwapChain.h
Phatom/Model/MMD/: PMXFile.cpp  PMXFile.h  PMXFileReader.h
PhatomCore/: CMakeLists.txt
PhatomCore/Common/include/: File.h  UnicodeUtil.h
PhatomCore/Common/src/: File.cpp  TextFileReader.cpp  UnicodeUtil.cpp
PhatomCore/Graphics/include/: VulkanInstance.h
PhatomCore/Model/MMD/include/: PMXFile.h
PhatomCore/Model/MMD/src/: PMXFile.cpp
Resource/shaders/: frag.frag  frag.spv  vert.spv  vert.vert
build-xcode/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
build-xcode/CMakeScripts/: ReRunCMake.make
build-xcode/Debug/: Phatom
build-xcode/DerivedData/ModuleCache.noindex/: Session.modulevalidation
build-xcode/DerivedData/Phatom/: info.plist
build-xcode/DerivedData/Phatom/Index/DataStore/v5/records/0D/: CMakeCXXCompilerId.cpp-1QGNUKYO55Z0D
build-xcode/DerivedData/Phatom/Index/DataStore/v5/records/19/: string-11Z17H23BWN19
build-xcode/DerivedData/Phatom/Index/DataStore/v5/records/7D/: test.h-VRCEXZ937Q7D
build-xcode/DerivedData/Phatom/Index/DataStore/v5/records/8S/: bit-24UBVMR0G608S
build-xcode/DerivedData/Phatom/Index/DataStore/v5/records/8W/: utility-3675JINGZ3K8W
build-xcode/DerivedData/Phatom/Index/DataStore/v5/records/AH/: string_view-CNHU9KBXZOAH
build-xcode/DerivedData/Phatom/Index/DataStore/v5/records/EX/: test.cpp-1E09ZTDG8SZEX
build-xcode/DerivedData/Phatom/Index/DataStore/v5/records/HD/: atomic-10JGO4OMKM8HD
build-xcode/DerivedData/Phatom/Index/DataStore/v5/records/L7/: functional-3SYTP434OQGL7
build-xcode/DerivedData/Phatom/Index/DataStore/v5/records/O0/: main.cpp-24WUL7686KEO0
build-xcode/DerivedData/Phatom/Index/DataStore/v5/records/QQ/: memory-JYIK4KZ8NUQQ
build-xcode/DerivedData/Phatom/Index/DataStore/v5/records/RU/: iterator-2XQ3OL1332WRU
build-xcode/DerivedData/Phatom/Index/DataStore/v5/units/: CMakeCXXCompilerId-dbc3dca51cfb184dce10190a280f1b11244b730253f58eeecfdc4ac1e5992b0e.o-RKUPD04URZ2Z  CMakeCXXCompilerId-dbc3dca51cfb184dce10190a280f1b117869a8c02556917dac1b92bbab702e59.o-2R0AP4FGWEHQF  main.o-1LGT83X89HHA6  test.o-22FEYN87DEOVP
build-xcode/DerivedData/Phatom/Logs/Issues/: 205E7E1E-222B-4F18-B03C-E5BDBAE10470.xcactivitylog  CC5B934C-7540-47FD-ACE2-4455F37D3511.xcactivitylog  LogStoreManifest.plist
build-xcode/DerivedData/Phatom/Logs/Run/: ACD3BF61-CA84-478D-A7D0-A305FD61A738.xcactivitylog  LogStoreManifest.plist
build-xcode/DerivedData/Phatom/TextIndex/: TextFragmentIndex-v8.idx
build-xcode/DerivedData/Phatom/XCBuildData/PIFCache/project/: PROJECT@v11_mod=1616331004.3655999_hash=dbc3dca51cfb184dce10190a280f1b11-json  PROJECT@v11_mod=1616331245.976262_hash=dbc3dca51cfb184dce10190a280f1b11-json  PROJECT@v11_mod=1616331323.8422403_hash=dbc3dca51cfb184dce10190a280f1b11-json  PROJECT@v11_mod=1616331625.9514723_hash=dbc3dca51cfb184dce10190a280f1b11-json  PROJECT@v11_mod=1616331757.7966647_hash=dbc3dca51cfb184dce10190a280f1b11-json  PROJECT@v11_mod=1616331792.9559178_hash=dbc3dca51cfb184dce10190a280f1b11-json  PROJECT@v11_mod=1616331859.4418178_hash=dbc3dca51cfb184dce10190a280f1b11-json  PROJECT@v11_mod=1616331891.2220602_hash=dbc3dca51cfb184dce10190a280f1b11-json  PROJECT@v11_mod=1616331938.5989904_hash=dbc3dca51cfb184dce10190a280f1b11-json  PROJECT@v11_mod=1616331969.3490539_hash=dbc3dca51cfb184dce10190a280f1b11-json  PROJECT@v11_mod=1616332013.5320716_hash=dbc3dca51cfb184dce10190a280f1b11-json  PROJECT@v11_mod=1616332056.3993387_hash=dbc3dca51cfb184dce10190a280f1b11-json  PROJECT@v11_mod=1616332068.095058_hash=dbc3dca51cfb184dce10190a280f1b11-json  PROJECT@v11_mod=1616333031.1473918_hash=dbc3dca51cfb184dce10190a280f1b11-json  PROJECT@v11_mod=1616333142.333559_hash=dbc3dca51cfb184dce10190a280f1b11-json
build-xcode/DerivedData/Phatom/XCBuildData/PIFCache/workspace/: WORKSPACE@v11_hash=(null)_subobjects=08dcde5f963d0cb7870e960bab4d7ec8-json  WORKSPACE@v11_hash=(null)_subobjects=1145459d91845614cc7009a6bdcd062f-json  WORKSPACE@v11_hash=(null)_subobjects=1218898df80cbba2936180ccf1623b6e-json  WORKSPACE@v11_hash=(null)_subobjects=18e652824b6c49d1f0c3b63bfaa008f2-json  WORKSPACE@v11_hash=(null)_subobjects=33020840c5abbead6059cdc39db3c56c-json  WORKSPACE@v11_hash=(null)_subobjects=3ac0a4614147725429e50ec213a49db1-json  WORKSPACE@v11_hash=(null)_subobjects=6ee7ecb2c4fb949a6fcc6e29dc50aa9c-json  WORKSPACE@v11_hash=(null)_subobjects=7161bf428fbb8db6e4153078977ed6b6-json  WORKSPACE@v11_hash=(null)_subobjects=9bdd029e40342485fb4dfdb42fdd295e-json  WORKSPACE@v11_hash=(null)_subobjects=ae68c6c01b1c97be8d2a577a5bada1ce-json  WORKSPACE@v11_hash=(null)_subobjects=b8c34d55dfd082f768ea6b816a2ec828-json  WORKSPACE@v11_hash=(null)_subobjects=dea9f7508d7ac6176b800d21cf85099e-json  WORKSPACE@v11_hash=(null)_subobjects=e1638533eb2f124f1dbe8f78844b45ab-json  WORKSPACE@v11_hash=(null)_subobjects=efac163d30f4afc98a600a428666a00a-json  WORKSPACE@v11_hash=(null)_subobjects=fc4193e39a5cae035f094337df447c0e-json
build-xcode/Phatom.build/Debug/Phatom.build/Objects-normal/x86_64/: Phatom.LinkFileList  main.d  test.d
build-xcode/Phatom.build/Debug/ZERO_CHECK.build/: Script-4C06E70EAB64452FAF3189D1.sh
build-xcode/Phatom.xcodeproj/: project.pbxproj
build-xcode/Phatom.xcodeproj/project.xcworkspace/xcuserdata/wyr.xcuserdatad/: UserInterfaceState.xcuserstate
build-xcode/Phatom.xcodeproj/xcuserdata/wyr.xcuserdatad/xcschemes/: xcschememanagement.plist
(+4 files in other folders)
